--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Demo Projects</title>
     <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="description" content="Repositories">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Santiago Llano">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
 </head>
 <body>
 <header>
