removing manifest file since it is now deprecated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="manifest.appcache">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Demo Projects</title>
@@ -26,6 +26,7 @@
 </section>
 <footer id="footer"></footer>
 <script src="index.js"></script>
+<script>(() => new Date().getTime())()</script>
 </body>
 
 </html>
