--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Santiago Llano">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="" content="0">
 </head>
 <body>
 <header>
