spa project added

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 </header>
 <section>
     <h1>Repositories</h1>
-    <li id="repositories"></li>
+    <div class="grid">
+        <ul id="repositories"></ul>
+    </div>
 </section>
 <footer id="footer"></footer>
-<script src="index.js"></script>
-<script>(() => new Date().getTime())()</script>
+<script src="index.js?v=1" type="module"></script>
 </body>
 
 </html>
