fix url restapi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </a>
 </header>
 <section>
-    <h1>Repositories</h1>
+    <h1>Demo Projects</h1>
     <div class="grid">
         <ul id="repositories"></ul>
     </div>
